lang/testing/diagnostics/unexpected_identifier_stderr.txt
unexpected_identifier.ispc:2:2: Error: syntax error, unexpected identifier.
2 |  foo
  |  ^^^
